@@ -1,25 +1,0 @@
-# depslib dependency file v1.0
-1716462284 ../sdl2_renderparty.h
-	<stdbool.h>
-	"SDL2/SDL.h"
-
-1716462257 source:../\sdl2_renderparty_example1.c
-	"SDL2/SDL.h"
-	"sdl2_renderparty.h"
-	<time.h>
-
-1716461807 source:../sdl2_renderparty_example1.c
-	"SDL2/SDL.h"
-	"sdl2_renderparty.h"
-	"sdl2_renderparty.c"
-	<time.h>
-
-1716463048 source:c:\users\thewe\onedrive\documents\pawbyte_workspace\sdl2_renderparty\sdl2_renderparty_example1.c
-	"SDL2/SDL.h"
-	"sdl2_renderparty.h"
-	<time.h>
-
-1716475230 c:\users\thewe\onedrive\documents\pawbyte_workspace\sdl2_renderparty\sdl2_renderparty.h
-	<stdbool.h>
-	"SDL2/SDL.h"
-
